--- a/entries/ga1hir.hateblo.jp/entry/2024/12/17/222720.md
+++ b/entries/ga1hir.hateblo.jp/entry/2024/12/17/222720.md
@@ -15,3 +15,14 @@ EditURL: https://blog.hatena.ne.jp/ga1hir/ga1hir.hateblo.jp/atom/entry/680241839
 - xxx
   - yyy
 
+```sql
+select * from hoge where fuga = 'piyo';
+```
+
+```Python
+def hello_world():
+    print('Hello world!')
+
+hello_world()
+```
+
