--- a/draft_entries/6802418398312415411.md
+++ b/draft_entries/6802418398312415411.md
@@ -14,3 +14,9 @@ PreviewURL: https://ga1hir.hateblo.jp/draft/entry/mLAcjmbLzduhmTbWJKUT3N-K3D4
 - xxx
   - yyy
 
+```Python
+def hello_world():
+    print('Hello world!')
+
+hello_world()
+```
